--- a/homework/Day_002_first_EDA.ipynb
+++ b/homework/Day_002_first_EDA.ipynb
@@ -17,10 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -30,10 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 設定 data_path\n",
@@ -49,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -75,10 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# for example\n",
@@ -94,24 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -282,45 +276,38 @@
        "3               Y             0          135000.0    312682.5      29686.5   \n",
        "4               Y             0          121500.0    513000.0      21865.5   \n",
        "\n",
-       "              ...              FLAG_DOCUMENT_18 FLAG_DOCUMENT_19  \\\n",
-       "0             ...                             0                0   \n",
-       "1             ...                             0                0   \n",
-       "2             ...                             0                0   \n",
-       "3             ...                             0                0   \n",
-       "4             ...                             0                0   \n",
+       "   ...  FLAG_DOCUMENT_18 FLAG_DOCUMENT_19 FLAG_DOCUMENT_20 FLAG_DOCUMENT_21  \\\n",
+       "0  ...                 0                0                0                0   \n",
+       "1  ...                 0                0                0                0   \n",
+       "2  ...                 0                0                0                0   \n",
+       "3  ...                 0                0                0                0   \n",
+       "4  ...                 0                0                0                0   \n",
        "\n",
-       "  FLAG_DOCUMENT_20 FLAG_DOCUMENT_21 AMT_REQ_CREDIT_BUREAU_HOUR  \\\n",
-       "0                0                0                        0.0   \n",
-       "1                0                0                        0.0   \n",
-       "2                0                0                        0.0   \n",
-       "3                0                0                        NaN   \n",
-       "4                0                0                        0.0   \n",
+       "  AMT_REQ_CREDIT_BUREAU_HOUR AMT_REQ_CREDIT_BUREAU_DAY  \\\n",
+       "0                        0.0                       0.0   \n",
+       "1                        0.0                       0.0   \n",
+       "2                        0.0                       0.0   \n",
+       "3                        NaN                       NaN   \n",
+       "4                        0.0                       0.0   \n",
        "\n",
-       "  AMT_REQ_CREDIT_BUREAU_DAY  AMT_REQ_CREDIT_BUREAU_WEEK  \\\n",
-       "0                       0.0                         0.0   \n",
-       "1                       0.0                         0.0   \n",
-       "2                       0.0                         0.0   \n",
-       "3                       NaN                         NaN   \n",
-       "4                       0.0                         0.0   \n",
+       "   AMT_REQ_CREDIT_BUREAU_WEEK  AMT_REQ_CREDIT_BUREAU_MON  \\\n",
+       "0                         0.0                        0.0   \n",
+       "1                         0.0                        0.0   \n",
+       "2                         0.0                        0.0   \n",
+       "3                         NaN                        NaN   \n",
+       "4                         0.0                        0.0   \n",
        "\n",
-       "   AMT_REQ_CREDIT_BUREAU_MON  AMT_REQ_CREDIT_BUREAU_QRT  \\\n",
-       "0                        0.0                        0.0   \n",
-       "1                        0.0                        0.0   \n",
-       "2                        0.0                        0.0   \n",
-       "3                        NaN                        NaN   \n",
-       "4                        0.0                        0.0   \n",
-       "\n",
-       "   AMT_REQ_CREDIT_BUREAU_YEAR  \n",
-       "0                         1.0  \n",
-       "1                         0.0  \n",
-       "2                         0.0  \n",
-       "3                         NaN  \n",
-       "4                         0.0  \n",
+       "   AMT_REQ_CREDIT_BUREAU_QRT  AMT_REQ_CREDIT_BUREAU_YEAR  \n",
+       "0                        0.0                         1.0  \n",
+       "1                        0.0                         0.0  \n",
+       "2                        0.0                         0.0  \n",
+       "3                        NaN                         NaN  \n",
+       "4                        0.0                         0.0  \n",
        "\n",
        "[5 rows x 122 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
